--- a/SafariNote.safariextension/Info.plist
+++ b/SafariNote.safariextension/Info.plist
@@ -11,9 +11,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.4</string>
+	<string>0.5</string>
 	<key>CFBundleVersion</key>
-	<string>4</string>
+	<string>5</string>
 	<key>Chrome</key>
 	<dict>
 		<key>Global Page</key>
@@ -51,7 +51,7 @@
 		</array>
 	</dict>
 	<key>Description</key>
-	<string>A Toolbar button to open The Simplenote web interface over the current page.</string>
+	<string>A Toolbar button to open a different website over the current page.</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
